09-gitops-argocd/app/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: devops-app-service
spec:
  type: ClusterIP
  selector:
    app: devops-app
  ports:
    - port: 80
      targetPort: 80
